--- a/xylophone/Base.lproj/Main.storyboard
+++ b/xylophone/Base.lproj/Main.storyboard
@@ -54,6 +54,9 @@
                                                     <fontDescription key="titleFontDescription" type="boldSystem" pointSize="40"/>
                                                     <color key="baseForegroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="keyPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="uRk-Z1-dkW"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" red="1" green="0.60392156862745094" blue="0.015686274509803921" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -74,6 +77,9 @@
                                                     <fontDescription key="titleFontDescription" type="boldSystem" pointSize="40"/>
                                                     <color key="baseForegroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="keyPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vsf-QT-BZf"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" red="1" green="0.79397219419999998" blue="0.053440786900000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -94,6 +100,9 @@
                                                     <fontDescription key="titleFontDescription" type="boldSystem" pointSize="40"/>
                                                     <color key="baseForegroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="keyPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bic-Rf-MBI"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" red="0.20087322590000001" green="0.77552890779999994" blue="0.38645619149999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -114,6 +123,9 @@
                                                     <fontDescription key="titleFontDescription" type="boldSystem" pointSize="40"/>
                                                     <color key="baseForegroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="keyPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mbh-Ui-aXS"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" red="0.39311358330000001" green="0.39587071540000002" blue="0.85477906469999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -134,6 +146,9 @@
                                                     <fontDescription key="titleFontDescription" type="boldSystem" pointSize="40"/>
                                                     <color key="baseForegroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="keyPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="B6p-FG-ZFu"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" red="0.094759561120000002" green="0.51811617610000005" blue="0.99815267320000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -154,6 +169,9 @@
                                                     <fontDescription key="titleFontDescription" type="boldSystem" pointSize="40"/>
                                                     <color key="baseForegroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="keyPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="EdE-mF-uJj"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <color key="backgroundColor" red="0.71647310259999997" green="0.38982650639999999" blue="0.88049083949999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
